<?xml version="1.0"?>
<package format="2">
  <name>ecn_bluerov_control</name>
  <version>0.1.0</version>
  <description>The ecn_bluerov_control package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
